# MLOps

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/test_project/: data.py  dataset.py  evaluate.py  model.py  train.py  typing_exercises.py  visualize.py
src/test_project/APIs/: api_requests.py  database.csv  main.py
tests/: test_data.py  test_model.py  test_training.py
